Profile / Security / Updated the color

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -297,7 +297,7 @@
                                 cursor: pointer;
                                 font-size: 13px;
                                 font-weight: 500;
-                                color: #23c865;
+                                color: #59d8f3;
                                 text-decoration: underline;
                             }
                         }
