Wallet / Transactions / Deposit / Changed the paypal get query

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1208,8 +1208,7 @@ div.wallet_balances {
             color: white;
         }
         &:hover {
-            border: none;
-            outline: none;
+            border: 1px solid gray;
         }
     }
     .css-26l3qy-menu {
