Wallet / Transactions / Statements / Added the proper font family for the select tags

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -26,6 +26,10 @@ a:hover {
     text-decoration: none;
 }
 
+.font-montserrat {
+    font-family: "Montserrat" !important;
+}
+
 ul {
     margin: 0;
     padding-left: 0;
