Wallet / Transactions / Statements / Changed the bg color of the selected items

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1221,6 +1221,9 @@ div.wallet_balances {
         .css-1n7v3ny-option {
             background-color: #464646;
         }
+        .css-9gakcf-option {
+            background-color: black;
+        }
     }
     .start-date-picker {
         border-radius: 10px;
