Wallet / Transactions / Tables / Updated the design to make the tables response

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1191,9 +1191,8 @@ div.wallet_balances {
         font-size: 12px;
     }
     .transaction-section-tables {
-        max-height: 500px;
-        min-height: 500px;
-        overflow-y: auto;
+        max-height: 430px !important;
+        min-height: 430px;
         @include custom-scroll(0vh);
     }
     .css-1s2u09g-control,
