Wallet / Transactions / Statements / Updated the calendars

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1252,3 +1252,41 @@ div.wallet_balances {
         }
     }
 }
+
+.react-datepicker {
+    background-color: black !important;
+    border: none !important;
+    .react-datepicker__current-month {
+        background-color: black;
+    }
+    .react-datepicker__header {
+        background-color: black;
+        padding-top: 14px;
+        .react-datepicker__current-month {
+            color: white;
+        }
+    }
+    .react-datepicker__day--selected {
+        background-color: $green;
+    }
+    .react-datepicker__day-name,
+    .react-datepicker__day,
+    .react-datepicker__day--selected {
+        color: white;
+    }
+    .react-datepicker__navigation {
+        top: 15px;
+    }
+    .react-datepicker__day {
+        transition: 500ms;
+        &:hover {
+            background-color: #6d6d6d;
+        }
+    }
+    .react-datepicker__triangle {
+        &::after,
+        &::before {
+            border-bottom-color: black !important;
+        }
+    }
+}
