Wallet / Transaction / Statements / Added changed the style of the calendar

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1268,6 +1268,7 @@ div.wallet_balances {
     }
     .react-datepicker__day--selected {
         background-color: $green;
+        border-radius: 50%;
     }
     .react-datepicker__day-name,
     .react-datepicker__day,
