--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -271,6 +271,20 @@
         }
     }
 }
+.auction-bid-list-section-group {
+    width: 100%;
+    max-height: 177px;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    & > .row {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        & > * {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+        }
+    }
+}
 
 .auction-bid-list-content-group {
     width: 100%;
