--- a/src/styles/sass/page/purchase/auction.scss
+++ b/src/styles/sass/page/purchase/auction.scss
@@ -159,7 +159,7 @@ main.purchaseAuction-page {
                         @media screen and (max-width: 768px) {
                             flex-direction: column;
                             margin-top: 30px;
-                            gap:0px;
+                            gap: 0;
                             p.title {
                                 width: 100%;
                                 margin: 0;
@@ -405,7 +405,7 @@ div.slider-container {
         font-weight: 500;
         font-size: 14px;
         top: 30px;
-        right: 0px;
+        right: 0;
     }
     & > input {
         padding: 8px 10px;
@@ -573,4 +573,10 @@ div.timebar {
         background: #de4934;
         border: 2px solid #de4934;
     }
+}
+.wrap-text {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
