--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -1,6 +1,44 @@
+.main-part {
+    height: 100%;
+}
+.right-background {
+    width: 100%;
+    height: 100%;
+    background-image: url(../../images/signup-bg.svg);
+    background-position: right -60px bottom -100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transform: scale(1.2);
+}
+@include media-breakpoint-down(lg) {
+    .right-background {
+        width: 100%;
+        height: 500px;
+        background-image: url(../../images/signup-bg.svg);
+        background-position: left -60px bottom -150px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        transform: scale(1.5);
+    }
+}
+@include media-breakpoint-down(sm) {
+    .right-background {
+        width: 100%;
+        height: 355px;
+        background-image: url(../../images/signup-bg.svg);
+        background-position: left -125px bottom -85px;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
 .signup-page {
     section {
         @extend %set-height2;
+    }
+    @include media-breakpoint-down(lg) {
+        section {
+            height: 100%;
+        }
     }
     .signup {
         position: relative;
@@ -130,6 +168,12 @@
             }
         }
     }
+}
+.tokens-img {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
 
 .apart-img,
