--- a/src/styles/sass/layout/_layout.scss
+++ b/src/styles/sass/layout/_layout.scss
@@ -130,3 +130,27 @@
         }
     }
 }
+
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background: transparent;
+    font-size: 10px;
+}
+
+@include media-breakpoint-down(lg) {
+    .footer-nav {
+        display: none;
+    }
+}
+
+@include media-breakpoint-down(lg) {
+    .footer-copyright {
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+
+
