--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -5,17 +5,30 @@
     width: 100%;
     height: 100%;
     background-image: url(../../images/signup-bg.svg);
-    background-position: right -60px bottom -100px;
+    background-position: right -100px bottom -200px;
     background-repeat: no-repeat;
     background-size: cover;
-    transform: scale(1.2);
+    transform: scale(1.3);
+    @media (min-width: 1600px) {
+        background-position: right -100px bottom -175px;
+        transform: scale(1.35);
+    }
+    @media (min-width: 1600px) {
+        background-position: right -100px bottom -175px;
+        transform: scale(1.35);
+    }
+    @media (min-width: 1600px) {
+        background-position: right -100px bottom -175px;
+        transform: scale(1.35);
+    }
 }
+
 @include media-breakpoint-down(lg) {
     .right-background {
         width: 100%;
         height: 500px;
         background-image: url(../../images/signup-bg.svg);
-        background-position: left -60px bottom -150px;
+        background-position: right -30px bottom -100px;
         background-repeat: no-repeat;
         background-size: cover;
         transform: scale(1.5);
@@ -45,6 +58,7 @@
         width: 100%;
         max-width: 395px;
         margin: 0 auto;
+        padding: 0 24px;
         &-head {
             font-weight: bold;
             font-size: 36px;
