--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -5,20 +5,26 @@
     width: 100%;
     height: 100%;
     background-image: url(../../images/signup-bg.svg);
-    background-position: right 80px bottom -80px;
+    background-position: right 50px bottom 3px;
     background-repeat: no-repeat;
     background-size: cover;
     transform: scale(1.2);
+    @media (max-width: 1400px) {
+        background-position: right -108px bottom 3px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        transform: scale(1.1);
+    }
 }
 @include media-breakpoint-down(lg) {
     .right-background {
         width: 100%;
         height: 500px;
         background-image: url(../../images/signup-bg.svg);
-        background-position: left -130px bottom -150px;
+        background-position: left -253px bottom -50px;
         background-repeat: no-repeat;
         background-size: cover;
-        transform: scale(1.5);
+        transform: scale(1.3);
     }
 }
 .right-position {
@@ -30,11 +36,11 @@
     }
     .right-background {
         position: absolute;
-        top: 26px;
+        top: 56px;
         width: 100%;
         height: 300px;
         background-image: url(../../images/signup-bg.svg);
-        background-position: left -115px bottom -63px;
+        background-position: left -156px bottom -13px;
         background-repeat: no-repeat;
         background-size: cover;
     }
