--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -412,7 +412,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .text-gray {
-    color: #8F8F8F;
+    color: #8f8f8f;
 }
 
 .txt-underline {
@@ -432,3 +432,6 @@ input[type="number"]::-webkit-outer-spin-button {
     height: 15px;
 }
 
+.mt-auto {
+    margin-top: auto !important;
+}
