Moving the currency select to the profile page

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -176,6 +176,9 @@
         }
         .account-details,
         .tier-details {
+            button.btn {
+                padding: 0;
+            }
             h4 {
                 border-bottom: 2px solid #464646;
                 padding-bottom: 15px;
