--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -435,3 +435,21 @@ input[type="number"]::-webkit-outer-spin-button {
 .mt-auto {
     margin-top: auto !important;
 }
+
+.form-check-input {
+    border: 1px solid #ffffff;
+    background-color: $black;
+    width: 24px;
+    height: 24px;
+    border-radius: unset;
+}
+.form-check-label {
+    display: flex;
+    align-items: center;
+    font-size: 11px;
+    font-weight: bold;
+}
+.form-check-input:checked {
+    background-color: $black;
+    border-color: white;
+}
