--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -449,7 +449,14 @@
     }
     .img_div {
         height: 140px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         svg {
+            width: 50px;
+            height: 50px;
+        }
+        img {
             width: 50px;
             height: 50px;
         }
@@ -474,8 +481,9 @@
 }
 
 .wallet_content {
+    height: 250px;
     .external_wallet {
-        height: 100px;
+        height: 112px;
         display: flex;
         flex-direction: column;
         justify-content: center;
