--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -3,6 +3,7 @@
     position: fixed;
     top: 0;
     padding: 28px 0 !important;
+    background-color: #1e1e1e !important;
     .image_div {
         width: 50px;
     }
