Home / Header / Fixed the background color isue

--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -4,7 +4,7 @@
         overflow-y: hidden;
     }
     .menu {
-        background-color: transparent;
+        background-color: transparent !important;
     }
     .hero-image {
         width: 90%;
