--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -10,7 +10,7 @@
         width: 90%;
     }
     .home-section {
-        background: none;
+        background: #1E1E1E;
         // @extend %set-height2;
         height: calc(100vh - 100px);
         display: flex;
