--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -341,7 +341,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .text-green {
-    color: #23c865;
+    color: #23c865!important;
 }
 
 .icon-23px {
