--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -984,3 +984,20 @@
         }
     }
 }
+
+div.image_avatar_div {
+    width: 70px;
+    position: relative;
+    margin-top: 20%;
+    div {
+        position: absolute;
+        svg {
+            width: 100%;
+            height: auto;
+            position: absolute;
+        }
+    }
+    img {
+        width: 100%;
+    }
+}
