--- a/src/styles/sass/page/admin/_modal.scss
+++ b/src/styles/sass/page/admin/_modal.scss
@@ -488,6 +488,93 @@
     }
 }
 
+.edit_avatarComponent_modal {
+    width: 80%;
+    @include mq("tablet", max) {
+        width: 90%;
+    }  
+    @include mq("phone", max) {
+        width: 100%;
+        height: 100vh;
+        overflow: auto;
+        border: none;
+        display: block;
+    }  
+    div.input_div {
+        width: 80%;
+        margin: auto;
+        div.upload {
+            height: 38px;
+            border: 1px solid #cccccc;
+            display: flex;
+            padding: 10px;
+            align-items: center;
+            justify-content: space-between;
+            p {
+                padding: 0;
+            }
+            p.file_name {
+                width: 80%;
+                font-size: 14px;
+                font-weight: 400;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+            p.upload_btn {
+                font-size: 24px;
+                svg {cursor: pointer;}
+            }
+        }
+        input.black_input {
+            height: 38px;
+            border: 1px solid #cccccc;
+        }
+        div.col-sm-4 {
+            padding: 0 30px;
+        }
+        div#position {
+            display: flex;
+            flex-direction: column;
+        }
+        div.col-md-6 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-bottom: 20px;
+            padding: 0 30px;
+        }
+        p {
+            font-size: 12px;
+            font-weight: 600;
+            padding-bottom: 5px;
+            span {
+                font-weight: 400;
+                margin-left: 20px;
+            }
+        }
+        @include mq("laptop", max) {
+            width: 100%;
+            div.col-sm-4 {
+                padding: 0 10px;
+                margin-bottom: 20px;
+            }
+        }  
+        @include mq("phone", max) {
+            div.col-sm-4 {
+                padding: 0;
+            }
+            div#position {
+                flex-direction: row;
+                div {
+                    width: 50%;
+                    padding: 0 10px;
+                }
+            }
+        }
+    }
+}
+
 .edit-userTier-modal {
     width: 80%;
     border: 1px solid #ffffff;   
