--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -28,6 +28,7 @@
                 width: 123.42px;
                 height: 93.17px;
                 margin: auto;
+                cursor: pointer;
             }
             &__name {
                 display: flex;
@@ -173,6 +174,11 @@
                         border: none;
                     }
                 }
+            }
+            .user-info_avatar {
+                width: 150px;
+                margin: auto;
+                margin-top: 150px;
             }
         }
         .account-details,
