--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -160,10 +160,10 @@
             justify-content: start;
             padding-top: 0 !important;
             padding-bottom: 0 !important;
-            .css-qc6sy-singleValue {
-                font-family: "Montserrat";
-                font-size: 13px;
-            }
+            // .css-qc6sy-singleValue {
+            //     font-family: "Montserrat";
+            //     font-size: 13px;
+            // }
             @include mq("phone", max) {
                 padding: 8px;
             }
