Fixed the banned modal and input style issues

--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -247,6 +247,9 @@
         }
         &-step2,
         &-step1 {
+            input {
+                height: 38px;
+            }
             // margin-bottom: -30px;
             .upload {
                 &-doc {
