Fixed the file upload box style

--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -249,6 +249,7 @@
         &-step1 {
             input {
                 height: 38px;
+                color: dimgray;
             }
             // margin-bottom: -30px;
             .upload {
