--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -559,6 +559,7 @@
         overflow: auto;
         border: none;
         height: 100vh;
+        padding-top: 50px;
     }
     .min_height1 {
         min-height: 400px;
@@ -619,7 +620,7 @@
                 color: white;
             }
             p {
-                width: 12%;
+                width: 50px;
                 span {
                     color: $green;
                 }
