--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -747,6 +747,7 @@
                     color: white;
                     p.time {
                         font-size: 24px;
+                        width: 30px;
                     }
                     .time-text {
                         font-size: 12px;
