Created the main style of transaction page

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -38,6 +38,7 @@
 // admin style
 @import "page/admin/common";
 @import "page/admin/index";
+@import "page/admin//transaction";
 @import "page/admin/rounds";
 @import "page/admin/users";
 @import "page/admin/modal";
