--- a/src/styles/sass/page/_select_figure.scss
+++ b/src/styles/sass/page/_select_figure.scss
@@ -43,6 +43,9 @@
                 &::-webkit-scrollbar-track {
                     background-color: #464646;
                 }
+                @include mq('phone', max) {
+                    max-height: 65vh;
+                }
             }
             .figure-item {
                 border: 1px solid rgba(255, 255, 255, 0.5);
@@ -50,6 +53,14 @@
                 &__avatar {
                     padding: 30px 10px;
                     background-color: $black;
+                    @include mq('phone', max) {
+                        div.avatar_image {
+                            height: 150px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+                    }
                 }
                 &__name {
                     padding: 8px 0;
@@ -85,7 +96,7 @@
     }
     &__box {
         width: 100%;
-        height: 390px;
+        min-height: 390px;
         border: 1px solid #ffffff;
         @include mq("phone", max) {
             border: none;
@@ -124,6 +135,9 @@
             .form-label {
                 font-size: 18px;
                 line-height: 23px;
+                @include mq('phone', max) {
+                    font-size: 14px;
+                }
             }
             .form-control {
                 font-size: 16px;
