--- a/src/styles/sass/page/admin/_transaction.scss
+++ b/src/styles/sass/page/admin/_transaction.scss
@@ -46,9 +46,14 @@ main.admin-transaction-page {
                                 padding: 6px 0;
                                 margin-right: 4vw;
                                 text-transform: uppercase;
+                                text-align: center;
                                 transition: 0.3s;
                                 @include mq('tablet', max) {
                                     font-size: 14px;
+                                }
+                                @include mq("phone", max) {
+                                    font-size: 10px;
+                                    margin-right: 2vw;
                                 }
                                 &:hover {
                                     color: $green;
