--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -38,7 +38,7 @@
 // admin style
 @import "page/admin/common";
 @import "page/admin/index";
-@import "page/admin//transaction";
+@import "page/admin//approval";
 @import "page/admin/rounds";
 @import "page/admin/users";
 @import "page/admin/modal";
