--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -359,7 +359,7 @@
                         svg {
                             cursor: pointer;
                             margin-left: 4px;
-                            &.text-green {
+                            &.txt-green {
                                 color: $green;
                             }
                         }
