Updated the pagination function

--- a/src/styles/sass/page/admin/_common.scss
+++ b/src/styles/sass/page/admin/_common.scss
@@ -13,7 +13,7 @@ a:hover {
 
 nav.MuiPagination-root {
     display: flex;
-    justify-content: end;
+    justify-content: center;
     li {
         width: 30px;
     }
