Fixed the style of account detail button

--- a/src/styles/sass/page/_support.scss
+++ b/src/styles/sass/page/_support.scss
@@ -219,6 +219,11 @@
             height: 47px;
         }
     }
+    #select_currency_in_profile {
+        input {
+            position: absolute!important;
+        }
+    }
 }
 
 .chat-modal {
