update: transaction page

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1236,7 +1236,7 @@ div.wallet_balances {
         font-size: 12px;
     }
     .transaction-section-tables {
-        max-height: 300px !important;
+        // max-height: 300px !important;
         min-height: 300px;
         @include custom-scroll(0vh);
     }
