--- a/src/styles/sass/components/_loading.scss
+++ b/src/styles/sass/components/_loading.scss
@@ -7,32 +7,78 @@
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
+    // width: 80px;
+    width: 100px;
+    height: 100px;
+    .dots_div {
+        position: absolute;
+        top: 90%;
+    }
+    .symbol_div {
+        display: flex;
+        justify-content: center;
+        .img_border {
+            padding: 5px;
+            border: 2px solid $green;
+            border-radius: 50%;
+            animation: animate_border 3s infinite ease-in-out;
+            @keyframes animate_border {
+                0% {
+                    transform: rotateY(0);
+                }
+                50% {
+                    transform: rotateY(-180deg);
+                }
+                100% {
+                    transform: rotateY(0);
+                }
+            }
+        }
+        img {
+            width: 70px;
+            animation: token 4s infinite ease-in-out;
+            @keyframes token {
+                0% {
+                    transform: rotateY(0);
+                }
+                50% {
+                    transform: rotateY(180deg);
+                }
+                100% {
+                    transform: rotateY(0);
+                }
+            }
+        }
+    }
 }
-.lds-ellipsis div {
+
+
+.dots_div div {
     position: absolute;
-    top: 33px;
     width: 13px;
     height: 13px;
     border-radius: 50%;
     background: #fff;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-.lds-ellipsis div:nth-child(1) {
+.dots_div div:nth-child(1) {
     left: 8px;
     animation: lds-ellipsis1 0.6s infinite;
 }
-.lds-ellipsis div:nth-child(2) {
+.dots_div div:nth-child(2) {
     left: 8px;
     animation: lds-ellipsis2 0.6s infinite;
 }
-.lds-ellipsis div:nth-child(3) {
+.dots_div div:nth-child(3) {
     left: 32px;
     animation: lds-ellipsis2 0.6s infinite;
 }
-.lds-ellipsis div:nth-child(4) {
+.dots_div div:nth-child(4) {
     left: 56px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+.dots_div div:nth-child(5) {
+    left: 80px;
     animation: lds-ellipsis3 0.6s infinite;
 }
 @keyframes lds-ellipsis1 {
@@ -58,4 +104,8 @@
     100% {
         transform: translate(24px, 0);
     }
+}
+
+.loading_page {
+    
 }
