--- a/src/styles/sass/components/_loading.scss
+++ b/src/styles/sass/components/_loading.scss
@@ -7,105 +7,61 @@
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    // width: 80px;
-    width: 100px;
-    height: 100px;
-    .dots_div {
+    width: 60px;
+    height: 60px;
+    div.letter {
         position: absolute;
-        top: 90%;
-    }
-    .symbol_div {
-        display: flex;
-        justify-content: center;
-        .img_border {
-            padding: 5px;
-            border: 2px solid $green;
-            border-radius: 50%;
-            animation: animate_border 3s infinite ease-in-out;
-            @keyframes animate_border {
-                0% {
-                    transform: rotateY(0);
-                }
-                50% {
-                    transform: rotateY(-180deg);
-                }
-                100% {
-                    transform: rotateY(0);
-                }
-            }
-        }
-        img {
-            width: 70px;
-            animation: token 4s infinite ease-in-out;
-            @keyframes token {
-                0% {
-                    transform: rotateY(0);
-                }
-                50% {
-                    transform: rotateY(180deg);
-                }
-                100% {
-                    transform: rotateY(0);
-                }
+        width: 50%;
+        height: 50%;
+        svg {
+            width: 100%;
+            height: 100%;
+            path {
+                fill: white;
             }
         }
     }
-}
-
-
-.dots_div div {
-    position: absolute;
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    background: #fff;
-    animation-timing-function: cubic-bezier(0, 1, 1, 0);
-}
-.dots_div div:nth-child(1) {
-    left: 8px;
-    animation: lds-ellipsis1 0.6s infinite;
-}
-.dots_div div:nth-child(2) {
-    left: 8px;
-    animation: lds-ellipsis2 0.6s infinite;
-}
-.dots_div div:nth-child(3) {
-    left: 32px;
-    animation: lds-ellipsis2 0.6s infinite;
-}
-.dots_div div:nth-child(4) {
-    left: 56px;
-    animation: lds-ellipsis2 0.6s infinite;
-}
-.dots_div div:nth-child(5) {
-    left: 80px;
-    animation: lds-ellipsis3 0.6s infinite;
-}
-@keyframes lds-ellipsis1 {
-    0% {
-        transform: scale(0);
+    $loadingTime: 2.5s;
+    .letter_N {
+        top: 0;
+        left: 0;
+        animation: letterN $loadingTime infinite ease-in-out;
+        @keyframes letterN {
+            0% { top: 0; left: 0; }
+            25% { top: 0; left: 60%; }
+            50% { top: 50%; left: 60%; }
+            75% { top: 50%; left: 0; }
+            100% { top: 0; left: 0; }
+        }
     }
-    100% {
-        transform: scale(1);
+    .letter_Y1 {
+        animation: letterY1 $loadingTime infinite ease-in-out;
+        @keyframes letterY1 {
+            0% { top: 0; left: 60%; }
+            25% { top: 50%; left: 60%; }
+            50% { top: 50%; left: 0; }
+            75% { top: 0; left: 0; }
+            100% { top: 0; left: 60%; }
+        }
     }
-}
-@keyframes lds-ellipsis3 {
-    0% {
-        transform: scale(1);
+    .letter_Y2 {
+        animation: letterY2 $loadingTime infinite ease-in-out;
+        @keyframes letterY2 {
+            0% { top: 50%; left: 0; }
+            25% { top: 0; left: 0; }
+            50% { top: 0; left: 60%; }
+            75% { top: 50%; left: 60%; }
+            100% { top: 50%; left: 0; }
+        }
     }
-    100% {
-        transform: scale(0);
+    .letter_U {
+        animation: letterU $loadingTime infinite ease-in-out;
+        @keyframes letterU {
+            0% { top: 50%; left: 60%; }
+            25% { top: 50%; left: 0; }
+            50% { top: 0; left: 0; }
+            75% { top: 0; left: 60%; }
+            100% { top: 50%; left: 60%; }
+        }
     }
-}
-@keyframes lds-ellipsis2 {
-    0% {
-        transform: translate(0, 0);
-    }
-    100% {
-        transform: translate(24px, 0);
-    }
-}
-
-.loading_page {
-    
 }
