Fixed the crypto box scroll issue in coin payment section

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -378,8 +378,8 @@ ul {
     color: lightgrey !important;
 }
 
-.h-85 {
-    height: 85% !important;
+.vh-85 {
+    height: 85vh !important;
 }
 
 .txt-green {
